# local-mcp-py

./: MANIFEST.in  README.md  pyproject.toml  setup.py
local_mcps/: cli.py
local_mcps/blog_helper/: __init__.py
local_mcps/code_helper/: __init__.py
local_mcps/draw_helper/: __init__.py
local_mcps/frontend_web_helper/: __init__.py
local_mcps/md_to_video_script_helper/: __init__.py
local_mcps/operator_helper/: __init__.py
local_mcps/ppt_helper/: __init__.py
local_mcps/tech_solution_helper/: __init__.py
local_mcps/tender_helper/: README.md  __init__.py
mcps/: cli.py  code_helper.py
