[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-mcp-py"
version = "0.1.0"
description = "A modular MCP (Model Context Protocol) server with various tools"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AIGC-Open", email = "aigc-open@gmail.com"}
]
maintainers = [
    {name = "AIGC-Open", email = "aigc-open@gmail.com"}
]
keywords = ["mcp", "model-context-protocol", "ai", "tools", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "fire>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.900",
    "build>=0.7.0",
    "twine>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/aigc-open/local-mcp-py"
Repository = "https://github.com/aigc-open/local-mcp-py.git"
Issues = "https://github.com/aigc-open/local-mcp-py/issues"
Documentation = "https://github.com/aigc-open/local-mcp-py#readme"

[project.scripts]
# 主命令 - 完整服务器
local-mcp = "mcps.cli:run"

# 代码辅助工具
local-mcp-code = "mcps.code_helper:code_helper_mcp"

[tool.setuptools.packages.find]
include = ["mcps*"]

[tool.setuptools.package-data]
mcps = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 